--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
         "Name": "TestProduct2",
         "Description": "test2",
         "Price": "222",
-        "DateAdded": "test2date"
+        "DateAdded": "test2date`1"
      }
  ]
  
